--- a/src/style.css
+++ b/src/style.css
@@ -3,15 +3,16 @@ body {
 }
 
 header {
-/*    position: absolute; 
+    position: absolute;
+    padding: 2vmin;
     top: 0px;
     left: 0px;
 
-    width: 70vh;
-    height: 20vh;
-    */
+    width: 76vmin;
+    height: 5vmin;
 
     background-color: #2A2E30;
+    z-index: 998;
 }
 
 canvas {
@@ -19,35 +20,20 @@ canvas {
     visibility: hidden;
 }
 
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    transform: translate(-50%, -50%);
-}
- 
-
 video {
     display: block;
-    width: 64vh;
-    height: 36vh;    
-    align-self: center;
-    vertical-align: bottom;
+    width: 64vmin;
+    height: 36vmin;    
     border-radius: 5px;
+    margin: auto;    
 }
 
 #preview-image {
     display: block;
-    width: 64vh;
-    height: 36vh;
-    align-self: center;
+    width: 64vmin;
+    height: 36vmin;
     border-radius: 5px;
-}
-
-header {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: auto;    
 }
 
 footer {
@@ -80,49 +66,49 @@ footer {
 
 #video-preview {
     position: absolute;
-
-    margin-left: auto;
-    margin-right: auto;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-content: space-between;
-    width: 70vh;
-    height: 90vh;
+    width: 76vmin;
+    height: 90vmin;
+    left:50%;
+    margin-left:-35vmin;
 }
 
 #photo-preview {
     position: absolute;
-
-    margin-left: auto;
-    margin-right: auto;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-content: space-between;
-    width: 70vh;
-    height: 90vh;
+    width: 76vmin;
+    height: 90vmin; 
+    left:50%;
+    margin-left:-35vmin;   
 }
 
 #gallery-view {
     position: absolute;
-
-    margin-left: auto;
-    margin-right: auto;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-content: space-between;
-    height: 90vh;
-    width: 70vh;
+    width: 76vmin;
+    height: 90vmin;
+    left:50%;
+    margin-left:-35vmin;
 }
 
 #gallery-view ul {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 10vh;
+    width: 76vmin;
+    height: 80vh;
+    margin: auto;
+    overflow-y: auto;
+    max-height: 80vh;
+
     list-style-type: none;
     display: flex;
     flex-direction: row;
@@ -131,12 +117,10 @@ footer {
     align-content: flex-start;
     align-items: stretch;
     background-color: transparent;
-    padding: 0px;
-    margin: 0px;
 }
 
 .photo-list-item {
-    padding-bottom: 3vh;
+    padding-bottom: 3vmin;
     margin: 0px;
     background-color: transparent;
 }
@@ -147,16 +131,16 @@ footer {
     margin: 0px;
     background-color: transparent;
 
-    width: 32vh;
-    height: 18vh;
+    width: 32vmin;
+    height: 18vmin;    
+    z-index: -1;
 }
 
 .delete-image {
     position: relative;
-    top: -14vh;
-    right: 4vh;
-    width: 3vh;
-    height: 3vh;
+    top: -14vmin;
+    right: 4vmin;
+    width: 3vmin;
+    height: 3vmin;
     background-color: transparent;
-
 }
